--- a/src/containers/admin/Header/Notify/Notify.scss
+++ b/src/containers/admin/Header/Notify/Notify.scss
@@ -1,139 +1,142 @@
-.notify{
+.notify {
+  position: absolute;
+  top: 100%;
+  width: 360px;
+  height: 360px;
+  transform-origin: top center;
+  transform: scaleY(0);
+  transition: transform 0.3s;
+  z-index: 1000;
+  &:before {
+    content: "";
     position: absolute;
-    top: 100%;
-    width: 360px;
-    height: 360px;
-    transform-origin: top center;
-    transform: scaleY(0);
-    transition: transform .3s;
-    z-index: 1000;
-    &:before{
-        content: "";
-        position: absolute;
-        width: 15px;
-        height: 15px;
-        transform: rotate(45deg);
-        top: -5px;
-        right: 22px;
-        background-color: #EFF0F4;
-        z-index: 0;
+    width: 15px;
+    height: 15px;
+    transform: rotate(45deg);
+    top: -5px;
+    right: 22px;
+    background-color: #eff0f4;
+    z-index: 0;
+  }
+  .notify__content {
+    position: relative;
+    z-index: 2;
+    background-color: #fff;
+    .messageNotify__title {
+      background-color: #eff0f4;
+      padding: 10px;
+      h4 {
+        margin-bottom: 0;
+        font-weight: 700;
+      }
     }
-    .notify__content{
-        position: relative;
-        z-index: 2;
-        background-color: #fff;
-        .messageNotify__title{
-            background-color: #EFF0F4;
-            padding: 10px;
-            h4{
-                margin-bottom: 0;
-                font-weight: 700;
-            }
-        }
-        .messageNotify__messageBox{  
-            margin-bottom: 0;
-            max-height: 320px;
-            overflow-y: auto;
-            p{
-                text-align: center;
-                margin: 14px 0;
-                font-size: 15px;
-                color: #EFF0F4;
-            }
-        }
-        .messageBox__item{
-            display:flex;
-            justify-content: flex-start;
-            align-items: center;
-            border-bottom: 1px solid #eff2f6;
-            padding: 10px;
-            cursor: pointer;
-            
-            .item__userItem{
-                margin-right: 10px;
-            }
-            .user__img{
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                background-color: #444;
-            }
-            .notifyType__icon{
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                border: 3px solid #49cdd0;
-                font-size: 30px;
-                line-height: 25px;
-                text-align: center;
-                color: #49cdd0;
-            }
-            .notifyType__icon.error{
-                border: 3px solid #e44f56;
-                color: #e44f56;
-            }
-            .notifyType__icon.warning{
-                border: 3px solid #e4c94f;
-                color: #e4c94f;
-            }
-            .user__name{
-                color: #5b9bd1;
-                font-weight: 600;
-            }
-        }
-        .messageNotify__viewAllBtn{
-            text-align: center;
-            font-size: 15px;
-            color: #5b9bd1;
-            padding: 10px;
-            background-color: #EFF0F4;
-            p{
-                margin-bottom: 0;
-                cursor: pointer;
-                transition: color 0.2s;
-                &:hover{
-                    color: #49cdd0;
-                }
-            }
-        }
-        .notify__footer{
-            padding: 20px 0;
-        }
+    .messageNotify__messageBox {
+      margin-bottom: 0;
+      max-height: 320px;
+      overflow-y: auto;
+      p {
+        text-align: center;
+        margin: 14px 0;
+        font-size: 15px;
+        color: #eff0f4;
+      }
     }
-    
+    .messageBox__item {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      border-bottom: 1px solid #eff2f6;
+      padding: 10px;
+      cursor: pointer;
+
+      .item__userItem {
+        margin-right: 10px;
+      }
+      .user__img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #444;
+      }
+      .notifyType__icon {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: 3px solid #49cdd0;
+        font-size: 30px;
+        line-height: 25px;
+        text-align: center;
+        color: #49cdd0;
+      }
+      .notifyType__icon.error {
+        border: 3px solid #e44f56;
+        color: #e44f56;
+      }
+      .notifyType__icon.warning {
+        border: 3px solid #e4c94f;
+        color: #e4c94f;
+      }
+      .user__name {
+        color: #5b9bd1;
+        font-weight: 600;
+      }
+      .user__name.error {
+        color: #e44f56;
+      }
+    }
+    .messageNotify__viewAllBtn {
+      text-align: center;
+      font-size: 15px;
+      color: #5b9bd1;
+      padding: 10px;
+      background-color: #eff0f4;
+      p {
+        margin-bottom: 0;
+        cursor: pointer;
+        transition: color 0.2s;
+        &:hover {
+          color: #49cdd0;
+        }
+      }
+    }
+    .notify__footer {
+      padding: 20px 0;
+    }
+  }
 }
 
-.notify{
-    right: 165px;
+.notify {
+  right: 165px;
 }
-.messageNotify{
-    right: 115px;
+.messageNotify {
+  right: 115px;
 }
-.messageNotify.show, .notify.show{
+.messageNotify.show,
+.notify.show {
+  transform: scaleY(1);
+  animation: shaky 1s ease-out 1;
+}
+
+@keyframes shaky {
+  0% {
+    transform: scaleY(0.1);
+  }
+  40% {
+    transform: scaleY(1.05);
+  }
+  60% {
+    transform: scaleY(0.95);
+  }
+  80% {
+    transform: scaleY(1.03);
+  }
+  100% {
+    transform: scaleY(0.97);
+  }
+  80% {
+    transform: scaleY(1.01);
+  }
+  100% {
     transform: scaleY(1);
-    animation: shaky 1s ease-out 1;
-}
-
-@keyframes shaky{
-    0%{
-        transform: scaleY(0.1);
-    }
-    40%{
-        transform: scaleY(1.05);
-    }
-    60%{
-        transform: scaleY(0.95);
-    }
-    80%{
-        transform: scaleY(1.03);
-    }
-    100%{
-        transform: scaleY(0.97);
-    }
-    80%{
-        transform: scaleY(1.01);
-    }
-    100%{
-        transform: scaleY(1);
-    }
+  }
 }
