--- a/src/containers/admin/AdminProfile/Adminmain/AdminMain.scss
+++ b/src/containers/admin/AdminProfile/Adminmain/AdminMain.scss
@@ -26,10 +26,10 @@
         width: 100%;
         height: 100%;
         border-radius: 50%;
-        background-color: #ccc;
-        color: #73bfdd;
+        background-color: rgb(255, 255, 255);
+        color: #49d075;
         font-weight: 700;
-        font-size: 73px;
+        font-size: 100px;
         line-height: 130px;
       }
       .edit-avatar {
