--- a/src/containers/admin/Header/AdminHeader.scss
+++ b/src/containers/admin/Header/AdminHeader.scss
@@ -100,11 +100,27 @@
       height: 30px;
       border-radius: 50%;
       border: 2px solid #ccc;
+      text-align: center;
       .notice{
         width: 10px;
         height: 10px;
         top: 20px;
         left: 0px;
+      }
+      .userImg{
+        width: 100%;
+        height: 100%;
+      }
+      img{
+        width: 100%;
+        height: 100%;
+        border-radius: 100%;
+      }
+      p{
+        margin-bottom: 0;
+        font-weight: 700;
+        color: #49d075;
+        line-height: 25px;
       }
     }
     .settingIcon {
