update-preview-delete-job

--- a/src/components/Message/message.scss
+++ b/src/components/Message/message.scss
@@ -1,3 +1,6 @@
-.custom-message{
-    margin-top: 40px;
+.custom-message {
+  margin-top: 40px;
+    .anticon {
+      top: -2px !important;
+    }
 }
