--- a/src/containers/home/homePage/profileUser/profileUser.scss
+++ b/src/containers/home/homePage/profileUser/profileUser.scss
@@ -371,6 +371,34 @@
             }
             .card-body {
               padding: 5px 10px 10px;
+              position: relative;
+              .overlay {
+                text-align: center;
+                left: 0;
+                top: 0;
+                position: absolute;
+                background: white;
+                width: 100%;
+                height: 100%;
+                transform: translateY(150px);
+                transition: all 1s;
+                border-top: 1px solid #ddd;
+                border-bottom: 1px solid #ddd;
+                font-weight: 700;
+                padding-top: 14px;
+                a {
+                  color: gray;
+                }
+                i{
+                  width: 20px;
+                }
+                button {
+                  border: none;
+                  background-color: transparent;
+                font-weight: 700;
+                color: gray;
+                }
+              }
               h4.card-title {
                 font-size: 15px;
                 line-height: 140%;
@@ -415,6 +443,13 @@
                 }
               }
             }
+            .hover-overlay {
+              &:hover {
+                .overlay {
+                  transform: translateY(0);
+                }
+              }
+            }
           }
           .create-new-gig {
             position: relative;
@@ -455,7 +490,6 @@
           span.eyeoutlined {
             color: #00698c;
             cursor: pointer;
-
           }
         }
       }
