fix issue admin

--- a/src/containers/admin/Header/AdminHeader.scss
+++ b/src/containers/admin/Header/AdminHeader.scss
@@ -238,6 +238,11 @@
   .notice__heartbeat {
     background-color: #f8e23b!important;
   }
+  .userIcon {
+    p{
+      color: #fff!important;
+    }
+  }
 }
 .AdminHeader.custom4{
   background-color: $color-main-6 !important;
