--- a/src/containers/home/homePage/profileUser/detailJob/detailJob.scss
+++ b/src/containers/home/homePage/profileUser/detailJob/detailJob.scss
@@ -6,10 +6,14 @@
   margin-bottom: 40px;
   scroll-behavior: smooth;
   .detail-job-content {
-    .bar-fixed {
+    #bar-fixed {
       border-top: 1px solid #ddd;
       border-bottom: 1px solid #ddd;
       background-color: white;
+      .fixed{
+        position: fixed;
+        z-index: 10;
+      }
       ul {
         margin-bottom: 0;
         padding: 16px 0;
