--- a/src/containers/home/homePage/profileUser/profileUser.scss
+++ b/src/containers/home/homePage/profileUser/profileUser.scss
@@ -381,22 +381,24 @@
                 width: 100%;
                 height: 100%;
                 transform: translateY(150px);
-                transition: all 1s;
+                transition: all 1s cubic-bezier(0.03, 1.33, 0.99, 1.1);
                 border-top: 1px solid #ddd;
                 border-bottom: 1px solid #ddd;
                 font-weight: 700;
                 padding-top: 14px;
+                visibility: hidden;
+                opacity: 0;
                 a {
                   color: gray;
                 }
-                i{
+                i {
                   width: 20px;
                 }
                 button {
                   border: none;
                   background-color: transparent;
-                font-weight: 700;
-                color: gray;
+                  font-weight: 700;
+                  color: gray;
                 }
               }
               h4.card-title {
@@ -446,7 +448,9 @@
             .hover-overlay {
               &:hover {
                 .overlay {
+                  visibility: visible;
                   transform: translateY(0);
+                  opacity: 1;
                 }
               }
             }
