done-update-job

--- a/src/containers/home/homePage/profileUser/detailJob/detailJob.scss
+++ b/src/containers/home/homePage/profileUser/detailJob/detailJob.scss
@@ -6,28 +6,56 @@
   margin-bottom: 40px;
   scroll-behavior: smooth;
   .detail-job-content {
-    #bar-fixed {
+    .bar-fixed {
       border-top: 1px solid #ddd;
       border-bottom: 1px solid #ddd;
       background-color: white;
-      .fixed{
-        position: fixed;
-        z-index: 10;
-      }
+      padding: 0 60px;
       ul {
         margin-bottom: 0;
-        padding: 16px 0;
+        padding: 20px 0;
         li {
           display: inline;
-          margin-right: 10px;
+          margin-right: 40px;
           a {
+            padding: 20px 0;
             font-weight: 600;
             font-size: 16px;
             color: #7a7d85;
           }
+          .over {
+            border-bottom: 4px solid #1dbf73;
+          }
+        }
+      }
+      button {
+        border: none;
+        background-color: transparent;
+        font-weight: 600;
+        font-size: 16px;
+        transition: all 1s;
+        position: relative;
+        span {
+          height: 2px;
+          background-color: #1dbf73;
+          color: #1dbf73;
+          width: 0px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          transition: width 0.5s;
+        }
+        a {
+          color: #1dbf73;
+        }
+        &:hover {
+          span {
+            width: 100%;
+          }
         }
       }
     }
+
     .share-gig {
       display: flex;
       padding: 10px;
@@ -73,6 +101,7 @@
     .main-content {
       width: 94%;
       margin: auto;
+      justify-content: space-between;
       .overview {
         .info-type-subtype {
           span {
@@ -154,9 +183,83 @@
               font-weight: 600;
               color: gray;
             }
-            p{
+            p {
               font-size: 15px;
               font-weight: 600;
+            }
+          }
+        }
+      }
+      .main-content-right {
+        top: 66px;
+        z-index: 1000;
+        border: 1px solid #ddd;
+        .nav-tabs {
+          text-align: center;
+          justify-content: flex-end;
+          font-weight: 600;
+          font-size: 16px;
+          .nav-item {
+            background-color: rgb(243, 243, 243);
+            max-width: 33.33%;
+            width: calc(100% / 3);
+            border-right: 1px solid #ddd;
+            &:last-child {
+              border-right: none;
+            }
+            .nav-link {
+              border: none;
+              border-radius: 0;
+              color: #62646a;
+            }
+            .active {
+              background-color: white;
+              border-bottom: 3px solid #1dbf73;
+              color: #1dbf73;
+            }
+          }
+        }
+        .tab-content {
+          .tab-pane {
+            padding: 25px;
+            .tab-pane-content {
+              display: flex;
+              justify-content: space-between;
+              p {
+                font-weight: bold;
+                span {
+                  margin-right: 10px;
+                  font-size: 20px;
+                }
+                &:last-child{
+                  font-size: 20px;
+                }
+              }
+              ul {
+                li {
+                  color: #62646a;
+                  font-weight: 600;
+                  i {
+                    margin-right: 17px;
+                    color: #ddd;
+                  }
+                }
+              }
+            }
+
+            button {
+              border: none;
+              padding: 10px 0px;
+              background-color: #1dbf73;
+              color: white;
+              font-weight: 700;
+              width: 100%;
+              border-radius: 5px;
+              font-size: 16px;
+              opacity: 0.9;
+              &:hover{
+                opacity: 1;
+              }
             }
           }
         }
