--- a/src/components/Content/HomeNotLogin/Carousel/carousel.scss
+++ b/src/components/Content/HomeNotLogin/Carousel/carousel.scss
@@ -3,10 +3,10 @@
 .carousel {
   position: relative;
   color: white;
-  line-height:0;
+  line-height: 0;
   .carousel-text {
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     top: 30%;
     left: 30px;
     color: white;
@@ -19,39 +19,41 @@
     .carousel-input-search {
       display: flex;
       position: relative;
-      margin-bottom: 15px
-;
-    margin-top: -20px
-;
-            i {
+      margin-bottom: 15px;
+      margin-top: -20px;
+      color: black;
+      i {
         position: absolute;
         color: gray;
         font-size: 16px;
         top: 13px;
         left: 10px;
       }
-      input{
+      input {
         padding: 10px 270px 10px 35px;
-    border: 1px solid #dadbdd;
-    border-radius: 5px 0 0 5px;
-    border-right: none;
-    font-size:15px;
+        border: 1px solid #dadbdd;
+        border-radius: 5px 0 0 5px;
+        border-right: none;
+        font-size: 15px;
       }
-      button{
+      button {
         border: none;
-    background-color: #1dbf73;
-    border-radius: 0 5px 5px 0;
-    color: white;
-    font-weight: bolder;
-    padding: 0 25px;
-    font-size:18px;
+        background-color: #1dbf73;
+        border-radius: 0 5px 5px 0;
+        color: white;
+        font-weight: bolder;
+        padding: 0 25px;
+        font-size: 18px;
+        a{
+          color: white;
+        }
       }
     }
     .carousel-popular {
       display: flex;
-    font-weight: bold;
-    font-size: 14px;
-    padding: 20px 0;
+      font-weight: bold;
+      font-size: 14px;
+      padding: 20px 0;
 
       ul {
         li {
@@ -61,13 +63,13 @@
           border: 1px solid white;
           border-radius: 15px;
           transition: all 0.5s;
-          &:hover{
-            background-color:white;
+          &:hover {
+            background-color: white;
           }
           a {
-            color:white;
-            &:hover{
-              color:black
+            color: white;
+            &:hover {
+              color: black;
             }
           }
         }
@@ -90,25 +92,25 @@
   .carousel-hero5 {
     @include herobackground("../assets/images/bg-hero-5-1792-x1.jpg");
   }
-  .carousel-name-hero{
-    position:absolute;
+  .carousel-name-hero {
+    position: absolute;
     bottom: 22px;
     right: 60px;
     font-size: 18px;
   }
-  .carousel-trusted{
+  .carousel-trusted {
     display: flex;
     align-items: baseline;
     justify-content: center;
     padding: 20px 0 10px 0;
     background-color: #fafafa;
-    span{
+    span {
       color: #b2b1b1;
       font-size: 18px;
       font-weight: 600;
       padding-right: 60px;
     }
-    li{
+    li {
       display: inline;
       padding-right: 40px;
     }
