--- a/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
+++ b/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
@@ -1,7 +1,7 @@
 #header__content-loggedin {
   background-color: rgba(255, 255, 255, 1);
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding: 25px;
   position: relative;
@@ -21,10 +21,6 @@
     border: none;
     border-radius: 50%;
   }
-  .header__icon-fixed {
-    position: absolute;
-    left: 28px;
-  }
 
   .header__icon-fixed img {
     width: 90px;
@@ -33,7 +29,7 @@
     display: flex;
     align-items: center;
 
-    .avatar-mini{
+    .avatar-mini {
       border-radius: 50%;
       width: 40px;
       height: 40px;
@@ -41,37 +37,40 @@
       cursor: pointer;
     }
   }
-  .header__nav-fixed li {
-    display: inline;
-    padding: 0 6px;
-  }
-  .header__nav-fixed a {
-    font-weight: 600;
-    font-size: 16px;
-    color: #8e8f93;
-    padding: 7px;
-    transition: all 0.3s;
-  }
-  .header__nav-fixed .btn-dis-fixed-pro {
-    color: #02c2a9;
+  .header__nav-fixed {
+    li {
+      display: inline;
+      padding: 0 6px;
+    }
+    a {
+      font-weight: 600;
+      font-size: 16px;
+      color: #8e8f93;
+      padding: 7px;
+      transition: all 0.3s;
+    }
+    .btn-dis-fixed-pro {
+      color: #02c2a9;
+    }
+    button {
+      background-color: #1dbf73;
+      border-radius: 50%;
+      font-weight: bold;
+      font-size: 18px;
+      border: none;
+      color: white;
+      transition: all 0.5s;
+      width: 40px;
+      height: 40px;
+    }
   }
   .header__nav-fixed a:hover {
     color: #1dbf73;
   }
-  .header__nav-fixed button {
-    background-color: #1dbf73;
-    border-radius: 50%;
-    font-weight: bold;
-    font-size: 18px;
-    border: none;
-    color: white;
-    transition: all 0.5s;
-    width: 40px;
-    height: 40px;
-  }
   .header__nav-fixed button:hover {
     background-color: white;
-    color: #1dbf73;border: 1px solid #1dbf73;
+    color: #1dbf73;
+    border: 1px solid #1dbf73;
   }
   .header__nav-fixed .dropdown-menu a {
     display: block;
@@ -85,37 +84,30 @@
 }
 
 #header-fixed-loggedin {
-  #header-search {
-    position: absolute;
-    top: 30px;
-    left: 200px;
-    transition: left 0.8s;
-    z-index: 2;
-    display: flex;
+  .search-input-antd-loggedin {
+    width: 25%;
+    margin-right: 250px;
+    .ant-input-group {
+      .ant-input {
+        font-weight: 600;
+        &:hover {
+          border-color: #1dbf73;
+        }
+        &:focus {
+          border-color: #1dbf73;
+        }
+      }
+      .ant-input-group-addon {
+        button {
+          font-weight: 700;
+          border: none;
+          background-color: #1dbf73;
+          color: white;
+          border-radius: 0 3px 3px 0;
+        }
+      }
+    }
   }
-  #header-search input {
-    padding: 4px 40px 4px 25px;
-    border: 1px solid gray;
-    border-radius: 4px 0 0 4px;
-    border-right: none;
-  }
-  .icon-input-header {
-    position: absolute;
-    top: 9px;
-    left: 3px;
-    color: gray;
-  }
-  #header-search button {
-    border: none;
-    background-color: #1dbf73;
-    border-radius: 0 4px 4px 0;
-    padding: 0 15px;
-    font-size: 15px;
-    color: white;
-    font-weight: bold;
-  }
-
-  //
 }
 
 /* category */
@@ -126,9 +118,9 @@
   top: 0px;
   display: block;
   background-color: white;
-  padding-top: 5px ;
-  border-top: 1px solid #a3a1a1;
-  border-bottom: 1px solid #a3a1a1;
+  padding-top: 5px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
   text-align: center;
   font-size: 16px;
   z-index: 1;
@@ -138,7 +130,7 @@
   }
   li {
     display: inline;
-    margin: 0 15px;
+    margin: 0 19px;
   }
   a {
     color: #7a7d85;
@@ -180,6 +172,15 @@
     .cate-special {
       color: rgb(57, 57, 236);
     }
+    &:last-child,
+    &:nth-child(8),
+    &:nth-child(7),
+    &:nth-child(6) {
+      .category__hover {
+        left: unset;
+        right: 0;
+      }
+    }
   }
   .category__hover {
     display: none;
@@ -187,7 +188,7 @@
     box-shadow: 0 0 2px 1px #999999;
     column-count: 2;
     position: absolute;
-    top: 20px;
+    top: 25px;
     left: 0;
     padding: 20px 30px;
     column-gap: 30px;
