--- a/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
+++ b/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
@@ -1,5 +1,29 @@
 #header-fixed {
   display: block;
+  position: relative;
+  .search-input-antd {
+    width: 25%;
+    .ant-input-group {
+      .ant-input {
+        font-weight: 600;
+        &:hover {
+          border-color: #1dbf73;
+        }
+        &:focus {
+          border-color: #1dbf73;
+        }
+      }
+      .ant-input-group-addon {
+        button {
+          font-weight: 700;
+          border: none;
+          background-color: #1dbf73;
+          color: white;
+          border-radius: 0 3px 3px 0;
+        }
+      }
+    }
+  }
 }
 
 #header__content-fixed {
@@ -13,22 +37,6 @@
   z-index: 2;
   width: 100%;
   margin: 0 auto;
-  .dropmenu-user {
-    left: -40% !important;
-    top: 30px !important;
-    transform: none !important;
-  }
-}
-.mainbutton-fixed {
-  margin-left: 60px;
-  width: 10px;
-  height: 10px;
-  background-color: green;
-  border: none;
-  border-radius: 50%;
-}
-.header__icon-fixed {
-  position: absolute;
 }
 
 .header__icon-fixed img {
@@ -39,7 +47,8 @@
     display: flex;
     align-items: center;
     a {
-      color: gray;
+      display: block;
+      color: #7a7d85;
       font-weight: bold;
       padding: 0 10px;
       font-size: 16px;
@@ -47,69 +56,45 @@
     .btn-navbar-join {
       button {
         background-color: transparent;
-        border: 1px solid green;
-        color:green;
+        border: 1px solid #1dbf73;
+        color: #1dbf73;
         border-radius: 7px;
         padding: 3px 17px;
         font-weight: bold;
         transition: all 0.5s;
         &:hover {
-          background-color: green;
-          color:white
+          background-color: #1dbf73;
+          color: white;
         }
       }
     }
 
     .dropdown-menu-lastchild {
-      a {
-        color: black;
-        font-weight: bolder;
+      ul {
+        width: 270px;
+        li {
+          color: unset;
+          a {
+            color: #7a7d85;
+            font-weight: bolder;
+          }
+        }
       }
     }
   }
 }
-#header-search {
-  position: absolute;
-  top: 30px;
-  left: 200px;
-  transition: left 0.8s;
-  z-index: 2;
-  display: flex;
-}
-#header-search input {
-  padding: 4px 40px 4px 25px;
-  border: 1px solid gray;
-  border-radius: 4px 0 0 4px;
-  border-right: none;
-}
-.icon-input-header {
-  position: absolute;
-  top: 9px;
-  left: 3px;
-  color: gray;
-}
-#header-search button {
-  border: none;
-  background-color: #1dbf73;
-  border-radius: 0 4px 4px 0;
-  padding: 0 15px;
-  font-size: 15px;
-  color: white;
-  font-weight: bold;
-}
 
-//
 /* category */
 #category__content {
   width: 100%;
   margin: 0 auto;
   position: relative;
-  top: 1px;
-  z-index: 10;
+  top: 0px;
+  z-index: 1;
   background-color: white;
-  padding: 5px 55px 0px 20px;
-  border-top: 1px solid #a3a1a1;
-  border-bottom: 1px solid #a3a1a1;
+  padding-top: 5px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
   text-align: center;
   font-size: 16px;
   font-weight: bolder;
@@ -119,7 +104,7 @@
 }
 #category__content li {
   display: inline;
-  margin: 0 10px;
+  margin: 0 19px;
 }
 #category__content a {
   color: #7a7d85;
@@ -143,6 +128,15 @@
 }
 .li-cate {
   position: relative;
+  &:first-child,
+  &:nth-child(1),
+  &:nth-child(2),
+  &:nth-child(3) {
+    .category__hover {
+      left: 0;
+      right: unset;
+    }
+  }
 }
 .li-cate:hover {
   border-bottom: 3px solid #1dbf73;
@@ -166,19 +160,13 @@
   box-shadow: 0 0 2px 1px #999999;
   column-count: 2;
   position: absolute;
-  top: 20px;
-  left: 0;
+  top: 25px;
+  right: 0;
   padding: 20px 30px;
   column-gap: 30px;
   z-index: 1000;
 }
-#category__content .pos-right {
-  position: absolute;
-  top: 20px;
-  right: 0;
-  left: -500px;
-  z-index: 1000;
-}
+
 #category__content .pos-active {
   position: absolute;
   top: 20px;
