--- a/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
+++ b/src/containers/home/homePage/DetailListSubType/detailListSubType.scss
@@ -1,8 +1,9 @@
 .detail-list-subtype {
   padding-top: 30px;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
   width: 96%;
   margin: 0 auto;
+  position: relative;
   .info-type-subtype {
     h4 {
       color: #222325;
@@ -19,15 +20,15 @@
     .result-sort {
       display: flex;
       justify-content: space-between;
-      p{
+      p {
         color: #7a7d85;
         font-weight: 600;
         font-size: 15px;
       }
-      .search-by-switch{
+      .search-by-switch {
         display: flex;
-        div{
-          label{
+        div {
+          label {
             font-weight: 600;
             margin-left: 15px;
             margin-right: 5px;
@@ -92,6 +93,28 @@
           }
         }
       }
+    }
+  }
+}
+.pagination {
+  position: absolute;
+  bottom: 15px;
+  right: 0;
+  button {
+    border: none;
+    padding: 10px 20px;
+    background-color: #1dbf73;
+    margin-left: 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+    opacity: 0.9;
+    &:hover {
+      opacity: 1;
+    }
+    &:disabled {
+      background-color: #b5b6ba;
+      color: #404145;
     }
   }
 }
