--- a/src/components/Content/HomeNotLogin/Business/business.scss
+++ b/src/components/Content/HomeNotLogin/Business/business.scss
@@ -33,7 +33,7 @@
         padding-left: 5px;
         &:last-child {
           font-size: $fs-2;
-          padding-left:10px
+          padding-left: 10px;
         }
       }
     }
@@ -48,7 +48,7 @@
   button {
     background-color: #1dbf73;
     font-weight: bold;
-    color: $color-main-3;
+    color: white;
     border: none;
     font-size: $fs-2;
     padding: 12px 24px;
