--- a/src/components/Content/HomeLoggedIn/EditorsPicks/editorsPicks.scss
+++ b/src/components/Content/HomeLoggedIn/EditorsPicks/editorsPicks.scss
@@ -12,9 +12,10 @@
     grid-gap: 33px;
     .editor-item {
       &:hover {
-        .text-active {
-          color: #1dbf73;
-          transition: color 0.5s;
+        p.text-active {
+          a {
+            color: #1dbf73;
+          }
         }
       }
       .card-body {
@@ -33,7 +34,9 @@
           }
         }
         p {
-          color: #404145;
+          a {
+            color: #404145;
+          }
           font-size: 18px;
 
           &:last-child {
