--- a/src/containers/home/JobDetail/Comment/Comment.scss
+++ b/src/containers/home/JobDetail/Comment/Comment.scss
@@ -34,6 +34,9 @@
     button {
       width: 44px;
       text-align: center;
+      background-color: transparent;
+      border-color: #ddd;
+      color: #1dbf73;
       span {
         vertical-align: 1px;
       }
@@ -48,6 +51,14 @@
     margin: 20px 0;
     .comment_list {
       margin-top: 10px;
+    }
+    .comment_list{
+      p{
+        font-size: 13px;
+        color: #62646a85;
+        text-align: center;
+        font-weight: 400;
+      }
     }
     .comment_listItem {
       display: flex;
