complete job detail

--- a/src/containers/home/JobDetail/JobDetail.scss
+++ b/src/containers/home/JobDetail/JobDetail.scss
@@ -115,6 +115,7 @@
       width: 400px;
       margin: auto;
       transition: position 0.3s;
+      position: relative;
     }
     .jobDetail__jobPrice.fix{
       position: fixed;
@@ -193,6 +194,48 @@
           color: #fff;
         }
         background-color: #7a7d85;
+      }
+    }
+    .jobBook__note{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 0;
+      background-color: #fafafad4;
+      text-align: center;
+      overflow-y: hidden;
+      transition: height 0.2s;
+      h4{
+        font-size: 30px;
+        font-weight: 500;
+        color: #1dbf73;
+        margin-top: -100%;
+        transition: margin-top .2s;
+      }
+      .noteLogin{
+        border: none;
+        display: block;
+        padding: 8px 20px;
+        border-radius: 5px;
+        background-color: #1dbf73;
+        font-weight: 700;
+        font-size: 18px;
+        margin-top: -100%;
+        a{
+          color: #fff;
+        }
+      }
+    }
+    .jobBook__note.show{
+      height: 100%;
+      h4, .noteLogin{
+        margin: auto;
+        margin-top: 50%;
+        transition-delay: 0.5s;
+      }
+      .noteFail{
+        color: #eb664f;
       }
     }
   }
