--- a/src/containers/home/homePage/profileUser/profileUser.scss
+++ b/src/containers/home/homePage/profileUser/profileUser.scss
@@ -500,3 +500,25 @@
     }
   }
 }
+@keyframes example {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.span-online {
+  .dot {
+    border-radius: 50%;
+    border: 1px solid #19a463;
+    background-color: #1dbf73;
+    font-size: 9px;
+    margin: 5px;
+    padding: 0px 5px;
+    animation-name: example;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(0.01, 0.35, 1, 1.38);
+  }
+}
