--- a/src/components/Content/HomeNotLogin/LogoMaker/logoMaker.scss
+++ b/src/components/Content/HomeNotLogin/LogoMaker/logoMaker.scss
@@ -4,22 +4,20 @@
   background-color: #4a73e8;
   width: 100%;
   max-width: 1290px;
-  margin:auto;
-h2{
-  color:white;
-  font-weight:bold;
-  font-size: calc($fs-4 + 2px);
-
-}
+  margin: auto;
+  display: flex;
+  h2 {
+    color: white;
+    font-weight: bold;
+    font-size: calc($fs-4 + 2px);
+  }
 }
 .fiverrLogomk__img {
   width: 100%;
   background-image: url("../../../../assets/images/logo-maker-banner-wide-desktop-1352-2x.png");
-  background-position: center;
+  background-position: right;
   background-repeat: no-repeat;
   background-size: cover;
-  display: flex;
-  justify-content: flex-start;
 }
 .fiverrLogomk__text {
   width: 50%;
@@ -45,4 +43,19 @@ h2{
 .fiverrLogomk__text svg {
   width: 188px;
   height: 26px;
+}
+
+@media only screen and (max-width: 375px) {
+  .fiverrLogomk {
+    .fiverrLogomk__container {
+      flex-direction: column;
+      .fiverrLogomk__text{
+        width: 90%;
+        padding-bottom: 0 !important;
+      }
+      .fiverrLogomk__img {
+        height: 300px;
+      }
+    }
+  }
 }
