--- a/src/containers/home/Categories/Categories.scss
+++ b/src/containers/home/Categories/Categories.scss
@@ -1,4 +1,6 @@
 .categories {
+  max-width: 1400px;
+  margin: auto;
   .categories__container {
     padding: 32px 32px 0;
   }
@@ -23,7 +25,6 @@
       padding-right: 0;
       overflow: hidden;
       margin-bottom: 48px;
-      // max-height: 214px;
       a {
         display: block;
         text-decoration: none;
@@ -33,7 +34,7 @@
         &:hover {
           span {
             &:after {
-                opacity: 1;
+              opacity: 1;
             }
           }
         }
@@ -69,6 +70,9 @@
   }
   .content__sideLeft {
     font-size: 17px;
+    .anticon-right{
+      display: none;
+    }
     .sideLeft__listTitle {
       padding-top: 0;
       color: #222325;
@@ -76,18 +80,92 @@
     }
     .sideLeft__listItem {
       padding: 0 16px 12px 0;
-      &:hover {
-        a {
-          text-decoration: underline !important;
-        }
-      }
     }
     a {
+      width: fit-content;
       display: block;
       text-decoration: none;
       color: #7a7d85;
       font-weight: 400;
       transition: text-decoration 0.2s;
+      &:hover {
+          text-decoration: underline !important;
+      }
+    }
+  }
+}
+
+// responsive
+@import "helpers/mixin.scss";
+@import "helpers/variables.scss";
+
+@include maxResponsive("extra-large-down") {
+  .categories {
+    .content__sideLeft {
+      display: none;
+    }
+    .content__sideRight {
+      flex: 0 0 100%;
+      max-width: 100%;
+      margin-left: -12px;
+      margin-right: 0;
+    }
+  }
+}
+@include maxResponsive("small-down") {
+  .categories {
+    .categories__container {
+      padding: 32px 0 0;
+    }
+    .categories__header {
+      h4 {
+        font-size: 24px;
+        color: #222325;
+      }
+    }
+    .categories__content {
+      padding-top: 0;
+    }
+    .content__sideRight {
+      display: none;
+    }
+    .content__sideLeft {
+      display: block;
+      flex: 0 0 100%;
+      max-width: 100%;
+      font-size: 17px;
+      ul {
+        padding: 24px 24px 48px;
+      }
+      .sideLeft__listItem {
+        padding: 0;
+        &:nth-of-type(1){
+          display: none
+        }
+        &:nth-of-type(2){
+          a{
+            border-top: none;
+          }
+        }
+        .anticon-right{
+          display: inline-block;
+        }
+        &:hover {
+          a {
+            text-decoration: none!important;
+          }
+        }
+      }
+      a {
+        padding: 16px 0;
+        border-top: 1px solid #dadbdd;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 15px;
+        color: #222325;
+        width: 100%;
+      }
     }
   }
 }
