--- a/src/containers/home/JobDetail/JobDetail.scss
+++ b/src/containers/home/JobDetail/JobDetail.scss
@@ -1,7 +1,10 @@
 .jobdetail {
-  scroll-behavior: smooth;
+  max-width: 1400px;
+  margin: auto;
   .jobdetail__content {
     padding: 32px;
+    margin-left: 0;
+    margin-right: 0;
   }
   .categories-link {
     display: flex;
@@ -25,6 +28,10 @@
       line-height: 14px;
       vertical-align: 0;
     }
+  }
+  .jobDetail__info {
+    padding-right: 0;
+    padding-left: 0;
   }
   .jobDetail__infoMain {
     .info__title {
@@ -104,59 +111,58 @@
       }
     }
   }
-  .jobDetail__book{
+  .jobDetail__book {
     padding: 32px;
-    top: 50px;
-    .jobPrice__item{
+    .jobPrice__item {
       padding: 20px 15px;
     }
-    .jobDetail__jobPrice{
+    .jobDetail__jobPrice {
       border: 1px solid #ccc;
-      width: 400px;
+      width: 70%;
       margin: auto;
       transition: position 0.3s;
       position: relative;
     }
-    .jobDetail__jobPrice.fix{
+    .jobDetail__jobPrice.fix {
       position: fixed;
-      // width: 29%;
       left: 74.4%;
-      // transform: translate3d(-50%, -200px, 0);
     }
-    .jobDetail__jobPrice.notFix{
+    .jobDetail__jobPrice.notFix {
       margin: auto;
+      position: absolute;
+      left: 50%;
     }
-    .jobPrice__title{
+    .jobPrice__title {
       text-align: center;
       font-size: 20px;
       font-weight: 700;
       background-color: #fafafa;
       padding: 15px;
     }
-    .jobPrice__listService{
+    .jobPrice__listService {
       text-align: center;
       color: #02c2a9;
       font-weight: 16px;
       font-size: 15px;
       border-bottom: 1px dotted #ccc;
-      span{
+      span {
         margin: 15px;
       }
     }
-    .jobPrice__price{
+    .jobPrice__price {
       display: flex;
       justify-content: space-between;
       align-items: center;
       font-size: 15px;
       font-weight: 700;
       span {
-        &:last-of-type{
+        &:last-of-type {
           font-size: 38px;
           color: #02c2a9;
         }
       }
     }
-    .jobPrice__slogan{
+    .jobPrice__slogan {
       text-align: center;
       padding-top: 0;
       font-weight: 500;
@@ -164,12 +170,13 @@
       color: #62646a;
       margin-bottom: 30px;
     }
-    .jobPrice__booking, .jobPrice__contact{
+    .jobPrice__booking,
+    .jobPrice__contact {
       width: 100%;
       text-align: center;
       padding-top: 0;
       border-bottom: 1px dotted #ccc;
-      button{
+      button {
         padding: 5px 10px;
         border: none;
         width: 100%;
@@ -178,25 +185,25 @@
         font-weight: 600;
         color: #fff;
         border-radius: 3px;
-        transition: background-color .3s;
-        &:hover{
+        transition: background-color 0.3s;
+        &:hover {
           background-color: #19a463;
         }
       }
     }
-    .jobPrice__contact{
+    .jobPrice__contact {
       padding-top: 40px;
       padding-bottom: 40px;
       background-color: #fafafa;
       border-bottom: none;
-      button{
-        a{
+      button {
+        a {
           color: #fff;
         }
         background-color: #7a7d85;
       }
     }
-    .jobBook__note{
+    .jobBook__note {
       position: absolute;
       top: 0;
       left: 0;
@@ -206,14 +213,14 @@
       text-align: center;
       overflow-y: hidden;
       transition: height 0.2s;
-      h4{
+      h4 {
         font-size: 30px;
         font-weight: 500;
         color: #1dbf73;
         margin-top: -100%;
-        transition: margin-top .2s;
+        transition: margin-top 0.2s;
       }
-      .noteLogin{
+      .noteLogin {
         border: none;
         display: block;
         padding: 8px 20px;
@@ -222,20 +229,71 @@
         font-weight: 700;
         font-size: 18px;
         margin-top: -100%;
-        a{
+        a {
           color: #fff;
         }
       }
     }
-    .jobBook__note.show{
+    .jobBook__note.show {
       height: 100%;
-      h4, .noteLogin{
+      h4,
+      .noteLogin {
         margin: auto;
         margin-top: 50%;
         transition-delay: 0.5s;
       }
-      .noteFail{
+      .noteFail {
         color: #eb664f;
+      }
+    }
+  }
+  .jobDetail__comment{
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+// responsive
+@import "helpers/mixin.scss";
+@import "helpers/variables.scss";
+
+@include maxResponsive("large-down") {
+  .jobdetail {
+    .jobDetail__book {
+      padding-left: 0;
+      padding-right: 0;
+      .jobDetail__jobPrice,
+      .jobDetail__jobPrice.fix,
+      .jobDetail__jobPrice.notfix {
+        width: 100% !important;
+        position: relative !important;
+        transform: translate3d(0, 0, 0) !important;
+        left: 0 !important;
+      }
+    }
+  }
+}
+@include maxResponsive("small-down") {
+  .jobdetail {
+    .jobDetail__infoMain {
+      .info__title {
+        h1 {
+          font-size: 24px;
+        }
+      }
+    }
+    .jobDetail__book{
+      .jobPrice__contact{
+        padding-top: 15px;
+        padding-bottom: 15px;
+      }
+      .jobPrice__price{
+        padding: 15px;
+        span{
+          &:nth-of-type(2){
+            font-size: 28px;
+          }
+        }
       }
     }
   }
