--- a/src/containers/shared/Auth/Login/Login.scss
+++ b/src/containers/shared/Auth/Login/Login.scss
@@ -1,11 +1,10 @@
 #signInt {
   .signIn__content {
     width: 100%;
-    margin: auto;
     border-radius: 4px;
     box-shadow: 0 0 8px #95979d;
     padding: 20px 16px 24px;
-    margin-top: 20px;
+    margin: 20px auto;
     text-align: center;
   }
   .form__header {
